hphp/hack/test/typecheck/inout/bad_inout_use_lvalue5.php.exp
File "bad_inout_use_lvalue5.php", line 6, characters 11-22:
Cannot pass list intrinsic for an inout parameter (Parsing[1002])
